# mert-vamp-plugin

./: .hgignore  COPYING  MERTVampPlugin.cpp  MERTVampPlugin.h  Makefile  README.md  configuration_hubert.py  experiment.cpp  mert-vamp-plugin.cat  meson.build  meson_options.txt  modeling_MERT.py  modeling_hubert.py  plugins.cpp  repoint-lock.json  repoint-project.json  test.py  version.h.in  withoutlib.cpp
.github/workflows/: linux.yml
cpp-libtorch/: Makefile  experiment.cpp  main.cpp  model.hpp
cpp-selfcontained/: Makefile  Makefile.generic  Makefile.linux.mkl  Makefile.macos  experiment.cpp  main.cpp  model.hpp  tensor.hpp  withoutlib.cpp  withoutlib2.cpp
data/: Makefile  parameters.hpp  weights.cpp  weights.hpp
python/: configuration_MERT.py  dump-weights.py  modeling_MERT.py  modeling_hubert.py  test.py
